詳細画面やデータベース作成

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,18 @@
 spring.application.name=DogStoreApp
 spring.security.user.name=test
 spring.security.user.password=test
+
+#H2DB
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+spring.datasource.username=test
+spring.datasource.password=
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+
+spring.sql.init.schema-locations=classpath:ddl/schema.sql
+spring.sql.init.data-locations=classpath:ddl/data.sql
+spring.sql.init.mode=always
+
+spring.jpa.hibernate.ddl-auto=none
